Minor cosmetic changes

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,7 +7,7 @@ For more info see https://aka.ms/dotnet-template-ms-identity-platform
   "AzureAd": {
     "Instance": "https://login.microsoftonline.com/",
     "Domain": "caldas.dev",
-    "TenantId": "aa3efc31-e34b-4415-9c6f-aae13213cf33",
+    "TenantId": "organizations",
     "ClientId": "33774a45-90bb-4461-9ebf-06c0c8a3cb98",
     "CallbackPath": "/signin-oidc"
   },
